@@ -84,6 +84,10 @@ int         status_get_corespeed_dev              (const hashcat_ctx_t *hashcat_
 int         status_get_memoryspeed_dev            (const hashcat_ctx_t *hashcat_ctx, const int device_id);
 int         status_get_progress_dev               (const hashcat_ctx_t *hashcat_ctx, const int device_id);
 double      status_get_runtime_msec_dev           (const hashcat_ctx_t *hashcat_ctx, const int device_id);
+int         status_get_kernel_accel_dev           (const hashcat_ctx_t *hashcat_ctx, const int device_id);
+int         status_get_kernel_loops_dev           (const hashcat_ctx_t *hashcat_ctx, const int device_id);
+int         status_get_kernel_threads_dev         (const hashcat_ctx_t *hashcat_ctx, const int device_id);
+int         status_get_vector_width_dev           (const hashcat_ctx_t *hashcat_ctx, const int device_id);
 
 int         status_progress_init                  (hashcat_ctx_t *hashcat_ctx);
 void        status_progress_destroy               (hashcat_ctx_t *hashcat_ctx);
